--- a/HotFi.App/HotFi.App.csproj
+++ b/HotFi.App/HotFi.App.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
         <PackageReference Include="SSH.NET" Version="2020.0.1" />
+        <PackageReference Include="SshKeyGenerator" Version="1.1.40" />
     </ItemGroup>
 
     <ItemGroup>
