--- a/HotFi.App/appsettings.Development.json
+++ b/HotFi.App/appsettings.Development.json
@@ -36,11 +36,12 @@
     }
   },
   "Auth": {
+    "AuthAddress": "http://localhost:9011",
     "ClientId": "823a9ac8-d8bc-4126-a03d-da43a6bd4aac",
     "ClientSecret": "JKqJ6QFPa29uelt6GSHQ2Sp20yZRSuFEfiqYf1IDxJ8",
     "RedirectUrl" : "/oauth-callback",
     "AuthPort": "9011",
-    "CodeChallenge": ""
+    "CodeChallenge": " "
   },
   "Vault" : {
     "BaseAddress" : "http://localhost:8200/",
